css/maincss.css
@media (max-width: 767px){
  /*Converts the form into an Inline element and the width is given using a relative sizing so that the spacing matches with the desging provided in mobile mode */
  .form-group .makeinline{
    display: inline-block;
    width: 70vw;
  }
  
  /*Makes the form aling center and the links in the navbar also get aligned center in the mobile mode ofcourse */
  .navbar .form-group,.navbar .nav-stacked {
    text-align: center;
  }

  /*used to give proper padding to the the copyright text in the footer in the mobile view.*/
  .mobileallpadding{
    padding-left: 10%;
    padding-right: 10%;
  }


  .navbar-collapse .navbar-form{
    margin-left: 0;
    margin-right: 0;
  }

  .aligncenter{
  text-align: center;
  }

  /*Fixes the vertical space alignment in the navbar in mobile view. */
  .navbar .container .nav {
      padding-top: 5px;
      padding-bottom: 5px;
  }
 
}

/*Makes the navbar background color into black */
.navbar .container .nav,nav.iamblack{
  background: black;
  color:white;
}

/* Removes the navbar  border and its radius  */
nav.iamblack {
  border-radius: 0;
  border: none;
}

/*All links the the site are white as the backgroud is black . Along with that when on hover the link becomes pink color */

.navbar a:link{
	color: white;
}
.navbar .container .nav li a:hover{
	color: #df1750;
}
.navbar a:active{
	color: green;
}
.navbar a:visited{
	color: white;
}

/*This is used in the main header which also serves as the navbar during mobile view. It gives a top spacing of 15 pixels and a background color of pure white .*/
.nopadding{
  /*
  padding-left: 0;
  */
  padding-top: 15px;
  /*
  padding-right: 0;
  */
  background-color: white;
}

/*Turns all the image into full width. This leads to them acting responsively in this case. */
.fullwidth{
  width: 100%;
}

/*By default all navbars have a bottom margin . This removes that where required.s */
.navbar{
  margin-bottom: 0;
}

/*This is responsbile for the looks of the welcome ,about us, and the services box . */
.shadow{
	 box-shadow: 0px 0px 10px #888888;
	 padding: 5%;
	 padding-top:1%;
   margin-top: 5%;
	 border-radius: 0%;
}
.pinktext{
	color: #df1750;
}

/*This gives margins to all the main text body inside the welcome , about us and services box.*/
.margins{
	margin-left: 0;
	margin-top: 20px;
	margin-right: 20px;
	margin-bottom: 20px;
}

/*Right aligns the more button inside the boxes Welcome , About US and Services. */
.rightAlign{
	text-align: right;
}


/*These apply to the webpage in non mobile mode. */
@media (min-width: 768px){
  .makeright{
    float: right;
  }

  .container .row div.col-sm-4 {
    padding-left: 10px;
    padding-right: 10px;

  }
  
  .alignRight{
    text-align: right;
  }
  .overlapNegative{
		margin-top: -26%;
		background-color: white;
	}
  .mobilecenter{
    clear: both;
  }

  .pullright{
    float: right;
  }
  .pullleft{
    float: left;
  }
  .padding10{
    padding-right: 1vw;
  }

  .footermenu{
      width: 50%;
  }

  .navbar > .container-fluid .navbar-brand{
    margin-left: 0;
  }
  .navbar-form .form-control{
    width: 300px;
  }

  .col-xs-12>.pinktext{
    margin-bottom: 35px;
  }

  /*Fixes the vertical space alignment in the navbar in desktop view. */
  .navbar .container .nav {
  padding-top: 5px;
  }
}

.topmargin{
  border-top-width: 1px;
  border-color: #df1750;
  border-style: solid;
  margin-top: 30px;
}

footer{
  padding-left: 15px;
  padding-right: 15px;
  margin-left: auto;
  margin-right: auto;
}

.padding10px{
  padding-top: 1px;
}

.clearfix{
  visibility: hidden;
  display: block;
  font-size: 0;
  content: " ";
  clear: both;
  height: 0;
}


footer a:link,a:hover,a:active,a:visited{
  color:black;
  text-decoration: none;
}

.rightAlign .btn{
  background-color:#df1750;
  padding: 0 10px;
  border-radius: 0;
  color: white;
}
.navbar-collapse{
  padding-right: 0;
  padding-left: 0;
}

.form-control:focus,.form-control{
  border-color: #df1750;
  box-shadow: none;
  border-radius: 0;
  border-width: 2px;
}
.navbar-form .form-group .btn {
  background-color: #df1750;
  border-radius: 0;
  padding-left: 20px;
  padding-right: 20px;
  color: white;
}

.navbar-brand .pinktext {
  font-family: 'Great Vibes', cursive;
  font-size: 2em;
}

.padding7px{
  padding-top: 10px;
}

@media (min-width: 768px) and (max-width: 991px) {
  .footerFixSetFontSizeTo10{
    font-size: 12px;
  }
  .overlapNegative{
    margin-top:-35%;
  }
}

.navbar-default .navbar-toggle{
  border: none;
}


@media (min-width: 992px) and (max-width: 1199px){
    .container .row div.col-md-offset-1 {
        margin-left: 40px;
    }
}

@media (max-width: 767px){
  .shadow{
    margin-top: 35px;
  }

  .col-xs-12 {
    padding-left: 20px;
    padding-right: 20px;
  }

  /*Matches the spacing in the navigation bar in mobile mode. The nav buttons are a bit larges without this. */
  .nav>li>a {
  padding-top: 6px;
  padding-bottom: 6px;
}
}


.col-xs-12>.pinktext {
  margin-top: 40px;
}

.navbar-form.makeright {
  border:none;
}

